<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/textExpresison"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
    <TextView
            android:id="@+id/textAnswer"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
    </TextView>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:orientation="horizontal">

        <Button
                android:text="@string/clear"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" android:id="@+id/button_clear"
                android:onClick="onClear"
        />
        <Button
                android:text="@string/division"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" android:id="@+id/button_division"
                android:onClick="onOperator"
        />
        <Button
                android:text="@string/multiplication"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" android:id="@+id/button_multiplication"
                android:onClick="onOperator"
        />

        <Button
                android:text="@string/backspace"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" android:id="@+id/button_backspace"
        android:onClick="onBackspace"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"


            android:orientation="horizontal">

        <Button
                android:text="@string/seven"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" android:id="@+id/button_7"
                android:onClick="onDigit"
        />
        <Button
                android:text="@string/eight"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" android:id="@+id/button_8"
                android:onClick="onDigit"
        />
        <Button
                android:text="@string/nine"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" android:id="@+id/button_9"
                android:onClick="onDigit"
        />
        <Button
                android:text="@string/pow"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" android:id="@+id/button_pow"
                android:onClick="onOperator"
        />
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"

            android:orientation="horizontal">

        <Button
                android:text="@string/four"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" android:id="@+id/button_4"
                android:onClick="onDigit"
        />

        <Button
                android:text="@string/five"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" android:id="@+id/button_5"
                android:onClick="onDigit"
        />
        <Button
                android:text="@string/six"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" android:id="@+id/button_6"
                android:onClick="onDigit"
        />
        <Button
                android:text="@string/minus"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" android:id="@+id/button_minus"
                android:onClick="onOperator"
        />


    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"

            android:orientation="horizontal">

        <Button
                android:text="@string/one"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" android:id="@+id/button_1"
                android:onClick="onDigit"
        />
        <Button
                android:text="@string/two"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" android:id="@+id/button_2"
                android:onClick="onDigit"
        />
        <Button
                android:text="@string/three"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" android:id="@+id/button_3"
                android:onClick="onDigit"
        />
        <Button
                android:text="@string/plus"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" android:id="@+id/button_plus"
                android:onClick="onOperator"
        />


    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

        <Button
                android:text="@string/percent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" android:id="@+id/button_percent"
                android:onClick="onOperator"
        />
        <Button
                android:text="@string/zero"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" android:id="@+id/button_0"
                android:onClick="onDigit"
        />

        <Button
                android:text="@string/dot"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" android:id="@+id/button_dot"
                android:onClick="onDigit"
        />

        <Button
                android:text="@string/equal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" android:id="@+id/button_equal"
                android:onClick="onEqual"
        />
    </LinearLayout>


</LinearLayout>